0.8.0 (currently working on)
- [#2624] Fix: Crash in the EM
- [#2637] Fix: Tables rows in FE registration list not are on the same line
- [#2533] Feature: Add form for confirming an event to the BE module
- [#2620] Fix: seminar::getOrganizers destructs the organizers at the wrong place
- [#2154] Fix: Step counter shows "step 3 of 2" after failed submit attempt on page 2
- [#788] Fix: Use t3lib_div::trimExplode instead of explode
- [#2592] Feature: Show the license expiry in the date single view
- [#1716] Fix: Make the CSV export work with multiline cells in Excel and OpenOffice.org
- [#2579] Fix: The user fields for export should be chosen from fe_user not tx_seminars_attendances
- [#2596] Fix: Use mb_strlen instead of strlen
- [#2503] Feature: Add DB result and DB query exceptions and wrappers for executing queries
- [#2582] Change: Load the seminar object (and its data) lazily in the registration class
- [#2534] Feature: Add a button for canceling an event to the BE events list
- [#2593] Feature: Show the license expiry in the "my events" list
- [#2617] Fix: Some headings in the "my events" list are moved up
- [#2616] Fix: Invalid HTML in the list view
- [#2532] Feature: Add a button for confirming an event to the BE events list
- [#2548] Fix: The owner image on the single view page should use the path that is configured in the sr_feuser_register EM settings
- [#2591] Change: Change seminarbagbuilder::limitToTopicsWithoutRegistrationByUser to take the expiry date into account
- [#2590] Feature: Add a getter for the license expiry
- [#2458] Fix: Expect false for a failed $dbResult, not null
- [#2581] Fix: Fixed localization in the eventslist testcase
- [#2589] Feature: Add a field "license expiry" to date records
- [#1611] Change: Add guard clauses to objectfromdb::createMmRecords
- [#2563] Fix: Deal with deleted FE users and seminars gracefully
- [#2541] Fix: Save memory by destructing the bags after usage in the tests and the production code