@@ -195,6 +195,8 @@ class tx_seminars_module2 extends tx_seminars_mod2_BackEndModule {
 				case 1:
 					if ($this->isConfirmEventFormRequested()) {
 						$this->content .= $this->getConfirmEventMailForm();
+					} elseif ($this->isCancelEventFormRequested()) {
+						$this->content .= $this->getCancelEventMailForm();
 					} else {
 						$eventsListClassname = t3lib_div::makeInstanceClassName(
 							'tx_seminars_mod2_eventslist'
@@ -234,11 +236,25 @@ class tx_seminars_module2 extends tx_seminars_mod2_BackEndModule {
 	 * @return boolean true if the form was requested and pre-conditions are met, false otherwise
 	 */
 	private function isConfirmEventFormRequested() {
-		if (!intval(t3lib_div::_POST('eventUid')) > 0) {
+		if ((!intval(t3lib_div::_POST('eventUid')) > 0)) {
 			return false;
 		}
 
 		return t3lib_div::_POST('action') == 'confirmEvent';
+	}
+
+	/**
+	 * Checks whether the user requested the form for canceling an event and
+	 * whether all pre-conditions for showing the form are met.
+	 *
+	 * @return boolean true if the form was requested and pre-conditions are met, false otherwise
+	 */
+	private function isCancelEventFormRequested() {
+		if (!(intval(t3lib_div::_POST('eventUid')) > 0)) {
+			return false;
+		}
+
+		return t3lib_div::_POST('action') == 'cancelEvent';
 	}
 
 	/**
@@ -249,6 +265,26 @@ class tx_seminars_module2 extends tx_seminars_mod2_BackEndModule {
 	private function getConfirmEventMailForm() {
 		$formClassName = t3lib_div::makeInstanceClassName(
 			'tx_seminars_mod2_ConfirmEventMailForm'
+		);
+		$form = new $formClassName(
+			intval(t3lib_div::GPvar('eventUid'))
+		);
+		$form->setPostData(t3lib_div::_POST());
+
+		$result = $form->render();
+		$form->__destruct();
+
+		return $result;
+	}
+
+	/**
+	 * Returns the form to canceling an event.
+	 *
+	 * @return string the HTML source for the form
+	 */
+	private function getCancelEventMailForm() {
+		$formClassName = t3lib_div::makeInstanceClassName(
+			'tx_seminars_mod2_CancelEventMailForm'
 		);
 		$form = new $formClassName(
 			intval(t3lib_div::GPvar('eventUid'))
