@@ -50,6 +50,11 @@ the event to which you are registered is confirmed now.</label>
 			<label index="eventMailForm_error_subjectMustNotBeEmpty">Please enter a subject.</label>
 			<label index="eventMailForm_error_messageBodyMustNotBeEmpty">Please enter a message body.</label>
 			<label index="referencesWarning">(There are %s reference(s) to this record!)</label>
+			<label index="cancelMailForm_sendButton">Send cancellation</label>
+			<label index="cancelMailForm_prefillField_subject">Event canceled</label>
+			<label index="cancelMailForm_prefillField_messageBody">Dear %s,
+
+the event you're registered for has been canceled.</label>
 		</languageKey>
 		<languageKey index="dk" type="array">
 			<label index="title">Arrangementer</label>
@@ -117,6 +122,11 @@ die Veranstaltung zu welcher Sie angemeldet sind, wurde nun zugesagt.</label>
 			<label index="eventMailForm_error_subjectMustNotBeEmpty">Bitte geben Sie einen Betreff ein.</label>
 			<label index="eventMailForm_error_messageBodyMustNotBeEmpty">Bitte geben Sie eine Mitteilung ein.</label>
 			<label index="referencesWarning">(Es gibt %s Verbindung(en) zu diesem Datensatz!)</label>
+			<label index="cancelMailForm_sendButton">Absage senden</label>
+			<label index="cancelMailForm_prefillField_subject">Veranstaltung abgesagt:</label>
+			<label index="cancelMailForm_prefillField_messageBody">Sehr geehrte/r %s,
+
+die Veranstaltung zu welcher Sie angemeldet sind, wurde nun abgesagt.</label>
 		</languageKey>
 		<languageKey index="nl" type="array">
 			<label index="title">Evenementen</label>
@@ -256,6 +266,9 @@ die Veranstaltung zu welcher Sie angemeldet sind, wurde nun zugesagt.</label>
 			<label index="eventMailForm_prefillFieldForConfirmation_messageBody" type="integer">79844644</label>
 			<label index="eventMailForm_error_subjectMustNotBeEmpty" type="integer">9192935</label>
 			<label index="eventMailForm_error_messageBodyMustNotBeEmpty" type="integer">54495100</label>
+			<label index="cancelMailForm_sendButton" type="integer">125778442</label>
+			<label index="cancelMailForm_prefillField_subject" type="integer">175603821</label>
+			<label index="cancelMailForm_prefillField_messageBody" type="integer">240814090</label>
 		</languageKey>
 		<languageKey index="nl" type="array">
 			<label index="title" type="integer">142581619</label>
@@ -397,6 +410,11 @@ die Veranstaltung zu welcher Sie angemeldet sind, wurde nun zugesagt.</label>
 the event to which you are registered is confirmed now.</label>
 			<label index="eventMailForm_error_subjectMustNotBeEmpty">Please enter a subject.</label>
 			<label index="eventMailForm_error_messageBodyMustNotBeEmpty">Please enter a message body.</label>
+			<label index="cancelMailForm_sendButton">Send cancellation</label>
+			<label index="cancelMailForm_prefillField_subject">Event canceled</label>
+			<label index="cancelMailForm_prefillField_messageBody">Dear %s,
+
+the event you're registered for has been canceled.</label>
 		</languageKey>
 		<languageKey index="nl" type="array">
 			<label index="title">Events</label>
